--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash.clonedeep": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-swipe": "^0.0.23",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
